--- a/bio.html
+++ b/bio.html
@@ -31,10 +31,21 @@
 
   <main>
     <h1>Bio</h1>
+    <h2>Hi I'm Emma- here's a little more about me-</h2>
+    <p>Things I love to do:</p>
+    <ul>
+      <li>Travel</li>
+      <li>Read</li>
+      <li>Hillwalking</li>
+      <li>Spend time with friends</li>
+      <li>Drink coffee!</li>
+    </ul>
   </main>
 
+  
+
   <footer>
-    <p>Copyright &copy; 2024 [Your Name]</p>
+    <p>Copyright &copy; 2024 Emma Smith</p>
   </footer>
 </body>
 
